--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 		<div class="header-bg-wrap"> <!-- Image as content not design -->
   		  <img class="header-bg-image" src="img/placeholder-1920x500.png" alt="Text that describes the image">
   		  <div class="header-content">
-    		<h1>Your Amazing Name of your <span class="shine">Website!</span></h1>
+    		<h1>The Story of An <span class="shine">Almond!</span></h1>
 			<h2>Your witty and compelling tag line goes here</h2> 
   		  </div>
 		</div>
@@ -133,4 +133,5 @@
 	<!-- <script src="js/cookies.js"></script> -->
 </body>
 </html>
+
 
