--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
 		<div class="header-bg-wrap"> <!-- Image as content not design -->
   		  <img class="header-bg-image" src="img/placeholder-1920x500.png" alt="Text that describes the image">
   		  <div class="header-content">
-    		<h1>The Story of An <span class="shine">Almond!</span></h1>
-			<h2>Your witty and compelling tag line goes here</h2> 
+    		<h1>The Story of An Amazing <span class="shine">Almond!</span></h1>
+			<h2>Almonds come and they go, harvest time is not for show</h2> 
   		  </div>
 		</div>
 	</header>
@@ -51,13 +51,13 @@
 		</aside> -->  <!-- end of sidebar1 -->
 	
 		<section class="content">
-			<h2>The first of many telling subheadings</h2>	
+			<h2>What about them almonds?</h2>	
 		<article>
         	<div class="image-container">
         		<img src="img/placeholder-2400.png" alt="Something specific about the image" />
         	</div>
-        	<h3>The first of another set of descriptive subheadings</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+        	<h3>Almonds are nutrient-rich seeds from the fruit of the almond tree (Prunus dulcis), widely valued for their flavor, versatility, and health benefits. Often eaten raw, roasted, or used in products like almond milk, almond butter, and almond flour, they are a popular ingredient in both sweet and savory dishes. Packed with protein, healthy fats, fiber, vitamins, and minerals, almonds support heart health, aid in energy, and make a convenient snack. Their long history stretches back thousands of years, with origins in the Middle East, and today they are one of the most widely cultivated and consumed nuts worldwide.</h3>
+			<p></p>
 		</article>
 		<article>
 			<div class="outer-container">
@@ -65,15 +65,15 @@
         			<div class="image-container">
         			<img src="img/placeholder-2400.png" alt="Something specific about the image" />
         			</div> <!-- End of the image container -->
-					<h3>Still more subheadings</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h3>Did you know?</h3>
+					<p>In addition to their nutritional value, almonds play a significant role in agriculture and sustainability. California produces about 80% of the world’s almonds, making it a major driver of the state’s economy, though almond farming is often discussed in relation to its high water usage. Beyond food, almonds are also used in cosmetic products—almond oil is prized for its moisturizing properties and is commonly found in skincare and haircare formulations. With their versatility spanning from culinary applications to health and beauty, almonds continue to be a globally important crop with both cultural and economic impact.					</p>
 				</div> <!-- End of the first inner container -->
 				<div class="inner-container"> <!-- Second inner container -->
         			<div class="image-container">
         			<img src="img/placeholder-2400.png" alt="Something specific about the image" />
         			</div> <!-- End of the image container -->
-					<h3>Still more subheadings</h3>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+					<h3>In case you wanted to know more</h3>
+					<p>Almonds also hold cultural and symbolic significance across different societies. In ancient times, they were considered a symbol of good luck and fertility, often given as gifts during weddings and celebrations. Today, almonds remain a traditional ingredient in holiday desserts and festive foods around the world, from marzipan in Europe to sweets in South Asia. Their presence in both everyday meals and special occasions reflects their enduring place in human history and culture.</p>
 				</div> <!-- End of the second inner container -->
 			</div> <!-- End of the outer container -->
 		</article>
@@ -81,8 +81,8 @@
         	<div class="image-container">
         		<img src="img/placeholder-2400.png" alt="Something specific about the image" />
         	</div>
-			<h3>The Third of another set of descriptive subheadings</h3>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			<h3>In case you didnt have enough info on almonds</h3>
+			<p>Scientific studies continue to explore the health benefits of almonds, highlighting their role in supporting weight management, stabilizing blood sugar, and reducing the risk of heart disease. The combination of healthy fats, protein, and fiber helps keep people feeling full and energized. As consumer demand for plant-based and nutritious foods grows, almonds are increasingly used in innovative products such as dairy alternatives, protein bars, and gluten-free baking mixes, ensuring their relevance in modern diets.</p>
 		</article>
 	</section><!-- end of content -->
 		<aside>
@@ -133,5 +133,4 @@
 	<!-- <script src="js/cookies.js"></script> -->
 </body>
 </html>
-
 
